--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required ( VERSION 3.5 )
 project ( nexus-sandbox )
 
+set ( CMAKE_CXX_STANDARD 11 )
+
 find_package ( HDF5 COMPONENTS CXX HL REQUIRED )
 
 add_subdirectory ( src )
