First example of parallel (independent) loads.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,7 @@ project ( nexus-sandbox )
 set ( CMAKE_CXX_STANDARD 11 )
 
 find_package ( HDF5 COMPONENTS CXX HL REQUIRED )
+find_package ( MPI REQUIRED )
+find_package ( Boost REQUIRED mpi )
 
 add_subdirectory ( src )
